[CSS] Fix wrong color on cold staking top menu

--- a/src/qt/concrete/res/css/style_dark.css
+++ b/src/qt/concrete/res/css/style_dark.css
@@ -150,7 +150,7 @@ QPushButton[cssClass="btn-check-cold-staking"] {
     qproperty-iconSize: 24px 24px;
     color:#ffffff;
     background-color:#505c4b7d;
-    border-bottom:2px solid #5C4B7D;
+    border-bottom:2px solid #b088ff;
     border-radius:2px;
 }
 
